# intents-demo

./: CMakeLists.txt  README  demo.conf  intents-demo.kdev4  intentsdialog.cpp  intentsdialog.h  intentsdialog.ui  main.cpp  send_to.desktop
